# PSO-Proiect---Remote-procedure-call

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Database.cpp  Makefile  MakefileClient  MakefileServer  Server.cpp  Server.h  database.xml  main.cpp  myprogram  readme  test_client  test_client.cpp
gui/: mainwindow.cpp  mainwindow.h
server/: Server.cpp  Server.h  Tracer.cpp  Tracer.h  main.cpp
shared/: Client.cpp  Client.h  Database.cpp  Database.h
